--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                 ties: 0,
                 totalProfit: 0,
                 totalBet: 0,
+                totalWinBet: 0,
                 maxWin: 0,
                 maxLoss: 0,
                 currentStreak: 0,
@@ -263,6 +264,9 @@
 
                     // Track streaks
                     if (profit > 0) {
+                        // 勝利時のベット金額を合計
+                        newStats.totalWinBet += totalBet;
+                        
                         if (prevStats.currentStreak > 0) {
                             newStats.currentStreak = prevStats.currentStreak + 1;
                         } else {
@@ -337,6 +341,7 @@
                         ties: 0,
                         totalProfit: 0,
                         totalBet: 0,
+                        totalWinBet: 0,
                         maxWin: 0,
                         maxLoss: 0,
                         currentStreak: 0,
@@ -480,6 +485,10 @@
                                                     <span className="font-bold">¥{stats.totalBet.toLocaleString()}</span>
                                                 </div>
                                                 <div className="flex justify-between">
+                                                    <span>勝利時ベット合計:</span>
+                                                    <span className="font-bold text-green-400">¥{stats.totalWinBet.toLocaleString()}</span>
+                                                </div>
+                                                <div className="flex justify-between">
                                                     <span>総収支:</span>
                                                     <span className={`font-bold ${stats.totalProfit >= 0 ? 'text-green-400' : 'text-red-400'}`}>
                                                         {stats.totalProfit >= 0 ? '+' : ''}¥{stats.totalProfit.toLocaleString()}
@@ -504,20 +513,20 @@
                                             <div className="space-y-3">
                                                 <div>
                                                     <div className="flex justify-between text-sm mb-1">
-                                                        <span>🔵 プレイヤー勝利</span>
+                                                        <span>🔴 プレイヤー勝利</span>
                                                         <span className="font-bold">{stats.playerWins}回 ({((stats.playerWins / stats.totalGames) * 100).toFixed(1)}%)</span>
                                                     </div>
                                                     <div className="w-full bg-gray-600 rounded-full h-2">
-                                                        <div className="bg-blue-500 h-2 rounded-full" style={{width: `${(stats.playerWins / stats.totalGames) * 100}%`}}></div>
+                                                        <div className="bg-red-500 h-2 rounded-full" style={{width: `${(stats.playerWins / stats.totalGames) * 100}%`}}></div>
                                                     </div>
                                                 </div>
                                                 <div>
                                                     <div className="flex justify-between text-sm mb-1">
-                                                        <span>🔴 バンカー勝利</span>
+                                                        <span>🔵 バンカー勝利</span>
                                                         <span className="font-bold">{stats.bankerWins}回 ({((stats.bankerWins / stats.totalGames) * 100).toFixed(1)}%)</span>
                                                     </div>
                                                     <div className="w-full bg-gray-600 rounded-full h-2">
-                                                        <div className="bg-red-500 h-2 rounded-full" style={{width: `${(stats.bankerWins / stats.totalGames) * 100}%`}}></div>
+                                                        <div className="bg-blue-500 h-2 rounded-full" style={{width: `${(stats.bankerWins / stats.totalGames) * 100}%`}}></div>
                                                     </div>
                                                 </div>
                                                 <div>
@@ -639,7 +648,7 @@
                             
                             {/* Bet Display with Input */}
                             <div className="grid grid-cols-3 gap-3 mb-4">
-                                <div className="bg-blue-600 p-3 rounded-xl text-center">
+                                <div className="bg-red-600 p-3 rounded-xl text-center">
                                     <div className="text-sm mb-2">プレイヤー</div>
                                     <input
                                         type="text"
@@ -648,11 +657,11 @@
                                         value={bet.player ? formatNumberWithCommas(bet.player) : ''}
                                         onChange={(e) => setBetDirect('player', e.target.value)}
                                         placeholder="0"
-                                        className="w-full bg-blue-700 text-white text-center text-lg font-bold py-2 rounded-lg border-2 border-blue-400 focus:outline-none focus:border-white"
+                                        className="w-full bg-red-700 text-white text-center text-lg font-bold py-2 rounded-lg border-2 border-red-400 focus:outline-none focus:border-white"
                                     />
-                                    <div className="text-xs text-blue-200 mt-1">2倍</div>
+                                    <div className="text-xs text-red-200 mt-1">2倍</div>
                                 </div>
-                                <div className="bg-red-600 p-3 rounded-xl text-center">
+                                <div className="bg-blue-600 p-3 rounded-xl text-center">
                                     <div className="text-sm mb-2">バンカー</div>
                                     <input
                                         type="text"
@@ -661,9 +670,9 @@
                                         value={bet.banker ? formatNumberWithCommas(bet.banker) : ''}
                                         onChange={(e) => setBetDirect('banker', e.target.value)}
                                         placeholder="0"
-                                        className="w-full bg-red-700 text-white text-center text-lg font-bold py-2 rounded-lg border-2 border-red-400 focus:outline-none focus:border-white"
+                                        className="w-full bg-blue-700 text-white text-center text-lg font-bold py-2 rounded-lg border-2 border-blue-400 focus:outline-none focus:border-white"
                                     />
-                                    <div className="text-xs text-red-200 mt-1">2倍 (6は1.5倍)</div>
+                                    <div className="text-xs text-blue-200 mt-1">2倍 (6は1.5倍)</div>
                                 </div>
                                 <div className="bg-yellow-600 p-3 rounded-xl text-center">
                                     <div className="text-sm mb-2">タイ</div>
@@ -683,31 +692,31 @@
                             {/* Quick Chip Selection */}
                             <div className="mb-3 text-center text-sm text-gray-300">クイックベット</div>
                             <div className="grid grid-cols-4 gap-2 mb-4">
-                                {[100, 500, 1000, 5000].map(amount => (
+                                {[5000, 10000, 50000, 100000].map(amount => (
                                     <button
                                         key={`p-${amount}`}
                                         onClick={() => addBet('player', amount)}
-                                        className="bg-blue-500 hover:bg-blue-600 active:bg-blue-700 py-2 px-1 rounded-lg font-bold text-sm"
+                                        className="bg-red-500 hover:bg-red-600 active:bg-red-700 py-2 px-1 rounded-lg font-bold text-sm"
                                     >
-                                        P +{amount >= 1000 ? `${amount/1000}k` : amount}
+                                        P +{amount >= 10000 ? `${amount/10000}万` : `${amount/1000}k`}
                                     </button>
                                 ))}
-                                {[100, 500, 1000, 5000].map(amount => (
+                                {[5000, 10000, 50000, 100000].map(amount => (
                                     <button
                                         key={`b-${amount}`}
                                         onClick={() => addBet('banker', amount)}
-                                        className="bg-red-500 hover:bg-red-600 active:bg-red-700 py-2 px-1 rounded-lg font-bold text-sm"
+                                        className="bg-blue-500 hover:bg-blue-600 active:bg-blue-700 py-2 px-1 rounded-lg font-bold text-sm"
                                     >
-                                        B +{amount >= 1000 ? `${amount/1000}k` : amount}
+                                        B +{amount >= 10000 ? `${amount/10000}万` : `${amount/1000}k`}
                                     </button>
                                 ))}
-                                {[100, 500, 1000, 5000].map(amount => (
+                                {[5000, 10000, 50000, 100000].map(amount => (
                                     <button
                                         key={`t-${amount}`}
                                         onClick={() => addBet('tie', amount)}
                                         className="bg-yellow-500 hover:bg-yellow-600 active:bg-yellow-700 py-2 px-1 rounded-lg font-bold text-sm"
                                     >
-                                        T +{amount >= 1000 ? `${amount/1000}k` : amount}
+                                        T +{amount >= 10000 ? `${amount/10000}万` : `${amount/1000}k`}
                                     </button>
                                 ))}
                             </div>
@@ -751,8 +760,8 @@
                                     <div
                                         key={i}
                                         className={`flex-shrink-0 w-16 h-16 rounded-lg flex items-center justify-center font-bold text-sm ${
-                                            h.result.includes('プレイヤー') ? 'bg-blue-600' :
-                                            h.result.includes('バンカー') ? 'bg-red-600' : 'bg-yellow-600'
+                                            h.result.includes('プレイヤー') ? 'bg-red-600' :
+                                            h.result.includes('バンカー') ? 'bg-blue-600' : 'bg-yellow-600'
                                         }`}
                                     >
                                         <div className="text-center">
